--- a/environment/it.polito.elite.dog.drivers.zwave.network.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.network.cfg
@@ -3,18 +3,19 @@
 
 # Since we use zway server for communication, first we need login and url info
 # Login URL
-loginUrl=https://z-cloud.z-wave.me:13832/
+loginUrl=http://unerzio.polito.it:8083/
 
 # Server username and password
-username= {username}
-password= {password}
+username=dbonino
+password=++zwave_control++
 
 # The Server trust store
-trustStorePath = {path to ZWaveNetworkDriver}/cert/jssecacerts
+trustStorePath = /home/bonino/Development/WorkSpaces/Tesi/s167138-aimone/ZWaveNetworkDriver/cert/jssecacerts
+# trustStorePath = D:/dev/Dog2-impl/ZWaveNetworkDriver/cert/jssecacerts
 
 # ------------------------------
 
-# Time between 2 subsequent polls of the zway values
+# Time between 2 subsequent polls of the real modbus registers in milliseconds
 pollingTimeMillis = 1000 
 
 # Time between two consecutive tests of the connection to the house (after)
