updated configuration to include network param types

--- a/environment/it.polito.elite.dog.drivers.zwave.network.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.network.cfg
@@ -3,7 +3,7 @@
 
 # Since we use zway server for communication, first we need login and url info
 # Login URL
-loginUrl=http://unerzio.polito.it:8083/
+loginUrl=http://sunstreaker.polito.it:8083/
 
 # Server username and password
 username=dbonino
