updated to account in-wall switch and shutter actuator

--- a/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
@@ -2,6 +2,8 @@
 134-3-6=MeteringPowerOutlet
 134-2-9=SinglePhaseElectricityMeter
 134-3-18=MeteringPowerOutlet
+134-3-14 = LevelControllableOutput 
+#should become metering dimmable power outlet
 
 # Everspring
 96-4-2=MeteringPowerOutlet
@@ -11,6 +13,7 @@
 # Vision
 265-8194-515=MovementAndTemperatureSensor
 265-8193-258=DoorSensor
+265-8204-3704=OnOffOutput
 
 #Fibaro
 271-1536-4096=MeteringPowerOutlet
