fixed wrong mapping for vision movement sensor

--- a/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
@@ -9,7 +9,8 @@
 96-6-1=TemperatureAndHumiditySensor
 
 # Vision
-265-8194-515=MovementAndTemperatureSensor
+#265-8194-515=MovementAndTemperatureSensor -- to be implemented
+265-8194-515=MovementSensor
 265-8193-258=DoorSensor
 
 #Fibaro
