added support to threephase meter

--- a/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
@@ -1,5 +1,6 @@
 # Aeotec / Aeon Labs
 134-3-6=MeteringPowerOutlet
+134-2-9-4=ThreePhaseElectricityMeter
 134-2-9=SinglePhaseElectricityMeter
 134-3-18=MeteringPowerOutlet
 134-3-14 = LevelControllableOutput 
