--- a/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.gateway.cfg
@@ -1,27 +1,13 @@
-# Aeotec / Aeon Labs
-134-3-6=MeteringPowerOutlet
-134-2-9-4=ThreePhaseElectricityMeter
-134-2-9=SinglePhaseElectricityMeter
-134-3-18=MeteringPowerOutlet
-134-3-14 = LevelControllableOutput 
-#should become metering dimmable power outlet
+#######################################################################################
+#
+#   Gateway Configuration
+#
+#######################################################################################
 
-# Everspring
-96-4-2=MeteringPowerOutlet
-96-4-1=LampHolder
-96-6-1=TemperatureAndHumiditySensor
+# Time to wait before first access to new devices to perform auto-detection
+waitBeforeDeviceInstall=2500
 
-# Vision
-#265-8194-515=MovementAndTemperatureSensor -- to be implemented
-265-8194-515=MovementSensor
-265-8193-258=DoorSensor
-265-8204-3704=OnOffOutput
+# Device database file
+deviceDB=devicedb/zwave-devices.properties
 
-#Fibaro
-271-1536-4096=MeteringPowerOutlet
 
-#Danfoss
-2-5-3=ThermostaticRadiatorValve
-
-#Eutronic
-328-1-1=ThermostaticRadiatorValve
