added support to everspring SP814 movement sensor

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -15,6 +15,7 @@
 96-4-2=MeteringPowerOutlet
 96-4-1=LampHolder
 96-6-1=TemperatureAndHumiditySensor
+96-1-2=MovementSensor
 
 # Vision
 #265-8194-515=MovementAndTemperatureSensor -- to be implemented
