Updated the device database

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -1,33 +1,67 @@
 #######################################################################################
 #
 #   Supported Devices Database
+#	(Last Update 2013-11-29)
 #
 #######################################################################################
-# Aeotec / Aeon Labs
-134-3-6=MeteringPowerOutlet
-134-2-9-4=ThreePhaseElectricityMeter
-134-2-9=SinglePhaseElectricityMeter
-134-3-18=MeteringPowerOutlet
-134-3-14 = LevelControllableOutput 
-#should become metering dimmable power outlet
 
-# Everspring
+##############################
+##### Aeotec / Aeon Labs #####
+##############################
+
+# Smart Energy Switch
+134-3-6=MeteringPowerOutlet
+# Home Energy Meter
+134-2-9-4=ThreePhaseElectricityMeter
+# Home Energy Meter
+134-2-9=SinglePhaseElectricityMeter
+# Smart Switch G2
+134-3-18=MeteringPowerOutlet
+# Micro Motor Controller
+134-3-14 = EnergyAndPowerMeteringLevelControllableOutput 
+
+#####################
+##### Everspring ####
+#####################
+
+# AN158
 96-4-2=MeteringPowerOutlet
+# AN145
 96-4-1=LampHolder
+# ST814
 96-6-1=TemperatureAndHumiditySensor
+# SP814
 96-1-2=MovementSensor
 
-# Vision
+################
+#### Vision ####
+################
 #265-8194-515=MovementAndTemperatureSensor -- to be implemented
+
+# ZP3102EU
 265-8194-515=MovementSensor
+# ZD2102EU
 265-8193-258=DoorSensor
+# ZL7421EU
 265-8204-3704=OnOffOutput
 
-#Fibaro
+################
+#### Fibaro ####
+################
+
+# wall plug FGWPF-101
 271-1536-4096=MeteringPowerOutlet
 
-#Danfoss
+#################
+#### Danfoss ####
+#################
+
+# Living Connect Z 014G0012
 2-5-3=ThermostaticRadiatorValve
 
-#Eutronic
+##################
+#### Eutronic ####
+##################
+
+# Stella Z
 328-1-1=ThermostaticRadiatorValve
