added door sensor

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -32,6 +32,9 @@
 96-6-1=TemperatureAndHumiditySensor
 # SP814
 96-1-2=MovementSensor
+# SM103 Door/Window Magnetic Sensor (To Check)
+96-2-1=DoorSensor
+96-514-1=DoorSensor
 
 ################
 #### Vision ####
