started addition of new devices

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -5,6 +5,16 @@
 #
 #######################################################################################
 
+###########################
+#### 2GIG Technologies ####
+###########################
+
+# CT30 Thermostat
+# 152-7698-348=Thermostat
+# CT100 Thermostat
+# 152-25601-261=Thermostat
+
+
 ##############################
 ##### Aeotec / Aeon Labs #####
 ##############################
