fixed wrong device definition in device db

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -28,7 +28,7 @@
 # Smart Switch G2
 134-3-18=MeteringPowerOutlet
 # Micro Motor Controller
-134-3-14 = EnergyAndPowerMeteringLevelControllableOutput 
+134-3-14=EnergyAndPowerMeteringLevelControllableOutput
 
 #####################
 ##### Everspring ####
