--- a/environment/it.polito.elite.dog.drivers.zwave.network.cfg
+++ b/environment/it.polito.elite.dog.drivers.zwave.network.cfg
@@ -1,22 +1,21 @@
 # NETWORK CONFIGURATION
 # ------------------------------
 
-# Since we use zway server for communication, first we need login and url info
+# Since we use Z-Way server for communication, first we need login and url info
 # Login URL
 loginUrl=http://sunstreaker.polito.it:8083/
 
 
-# Server username and password
-username=dbonino
-password=++zwave_control++
+# Server username and password - useless, to be removed
+username=user
+password=user
 
-# The Server trust store
-trustStorePath = /home/bonino/Development/WorkSpaces/Tesi/s167138-aimone/ZWaveNetworkDriver/cert/jssecacerts
-# trustStorePath = D:/dev/Dog2-impl/ZWaveNetworkDriver/cert/jssecacerts
+# The Server trust store - useless, to be removed
+trustStorePath = /cert/jssecacerts
 
 # ------------------------------
 
-# Time between 2 subsequent polls of the real modbus registers in milliseconds
+# Time between 2 subsequent polls of the Z-Wave network in milliseconds
 pollingTimeMillis = 1000 
 
 # Time between two consecutive tests of the connection to the house (after)
