updated configuration and device db

--- a/environment/devicedb/zwave-devices.properties
+++ b/environment/devicedb/zwave-devices.properties
@@ -29,6 +29,8 @@
 134-3-18=MeteringPowerOutlet
 # Micro Motor Controller
 134-3-14=EnergyAndPowerMeteringLevelControllableOutput
+# MultiSensor
+134-2-5=QuadSensor
 
 #####################
 ##### Everspring ####
